# oh-my-deepseek-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
crons/: immune-audit.cron
docs/research/: 01-plugin-feasibility-research.md  02-omo-task-prompt.md  spike-context-engine-fork.md
mcp/checkpoint-review/: models.py  server.py  storage.py
mcp/harness_server/: config.yaml  models.py  server.py  storage.py
mcp/memory-tagger/: config.yaml  models.py  requirements.txt  server.py  storage.py  tagger.py
mcp/plan-engine/: engine.py  models.py  server.py  storage.py
plugins/: deepseek_context  deepseek_harness
plugins/deepseek-context/: __init__.py  compressor.py  config.yaml  plugin.yaml
plugins/deepseek-harness/: __init__.py  assessor.py  gate.py  immune_audit.py  intent_router.py  latest_reminder.py  learner.py  plugin.yaml  reasoning_effort.py  reasoning_strip.py  tools.py
plugins/digital-twin/: assessor.py  plugin.yaml  subagent_watch.py
scripts/: daily-reflection.sh  install.sh  sync-deepseek-harness.sh  sync-digital-twin.sh
tests/: conftest.py  test_assessor.py  test_assessor_v2.py  test_context_engine.py  test_gate.py  test_gate_v2.py  test_harness_server.py  test_intent_router.py  test_latest_reminder.py  test_learner.py  test_mcp_discovery.py  test_mcp_servers.py  test_plugin_yaml.py  test_reasoning_effort.py  test_reasoning_strip.py  test_subagent_watch.py  test_tool_registration.py
