[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-deepseek-harness"
version = "2.0.0"
description = "DeepSeek 深度优化插件 -- 14 项物理特性全激发"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "yuanchenglu"}]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",
]
mcp = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["plugins.*", "packages.*"]
